--- a/TetrisLT/TetrisLT.vcxproj.filters
+++ b/TetrisLT/TetrisLT.vcxproj.filters
@@ -134,5 +134,8 @@
     <ClInclude Include="h\RotationSystem\Original.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="h\Tetromino\TopOutConditionsEnum.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
