added sdl ttf dependency and sample font loading and text rendering; added delay after piece lock feature; added toggling of ghost piece rendering; improved rendering of hold piece and next 5 pieces;

--- a/TetrisLT/TetrisLT.vcxproj.filters
+++ b/TetrisLT/TetrisLT.vcxproj.filters
@@ -144,4 +144,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="fonts\Silkscreen-Bold.ttf" />
+    <Font Include="fonts\Silkscreen-Regular.ttf" />
+  </ItemGroup>
 </Project>
