--- a/TetrisLT/TetrisLT.vcxproj
+++ b/TetrisLT/TetrisLT.vcxproj
@@ -147,6 +147,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="h\Randomizer\RandomizerBase.hpp" />
+    <ClCompile Include="imgui\imgui.cpp" />
+    <ClCompile Include="imgui\imgui_demo.cpp" />
+    <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="imgui\imgui_impl_sdl.cpp" />
+    <ClCompile Include="imgui\imgui_impl_sdlrenderer.cpp" />
+    <ClCompile Include="imgui\imgui_tables.cpp" />
+    <ClCompile Include="imgui\imgui_widgets.cpp" />
+    <ClCompile Include="src\Timer.cpp" />
+    <ClCompile Include="src\UI\Menu.cpp" />
+    <ClCompile Include="src\UI\Resources.cpp" />
+    <ClCompile Include="src\UI\SinglePlayer.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\Randomizer\BagOf7.cpp" />
@@ -166,6 +177,8 @@
     <ClCompile Include="src\Tetromino\TetrominoHelpers.cpp" />
     <ClCompile Include="src\Tetromino\Z.cpp" />
     <ClCompile Include="src\UI\Multiplayer.cpp" />
+    <ClCompile Include="src\UI\TetrisConfig.cpp" />
+    <ClCompile Include="src\UI\TetrisStatsHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="h\game.hpp" />
@@ -181,6 +194,8 @@
     <ClInclude Include="h\Tetromino\O.hpp" />
     <ClInclude Include="h\Tetromino\S.hpp" />
     <ClInclude Include="h\Tetromino\T.hpp" />
+    <ClInclude Include="h\Tetromino\TetrisSettings.hpp" />
+    <ClInclude Include="h\Tetromino\TetrisStats.hpp" />
     <ClInclude Include="h\Tetromino\TetrominoBase.hpp" />
     <ClInclude Include="h\Tetromino\TetrominoEnum.hpp" />
     <ClInclude Include="h\Tetromino\TetrominoHandler.hpp" />
@@ -189,11 +204,28 @@
     <ClInclude Include="h\Tetromino\TetrominoRotationEnum.hpp" />
     <ClInclude Include="h\Tetromino\TopOutConditionsEnum.hpp" />
     <ClInclude Include="h\Tetromino\Z.hpp" />
+    <ClInclude Include="h\Timer.hpp" />
+    <ClInclude Include="h\UI\Menu.hpp" />
     <ClInclude Include="h\UI\Multiplayer.hpp" />
+    <ClInclude Include="h\UI\Resources.hpp" />
+    <ClInclude Include="h\UI\SinglePlayer.hpp" />
+    <ClInclude Include="h\UI\TetrisConfig.hpp" />
+    <ClInclude Include="h\UI\TetrisStatsHandler.hpp" />
+    <ClInclude Include="imgui\imconfig.h" />
+    <ClInclude Include="imgui\imgui.h" />
+    <ClInclude Include="imgui\imgui_impl_sdl.h" />
+    <ClInclude Include="imgui\imgui_impl_sdlrenderer.h" />
+    <ClInclude Include="imgui\imgui_internal.h" />
+    <ClInclude Include="imgui\imstb_rectpack.h" />
+    <ClInclude Include="imgui\imstb_textedit.h" />
+    <ClInclude Include="imgui\imstb_truetype.h" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="fonts\Silkscreen-Bold.ttf" />
     <Font Include="fonts\Silkscreen-Regular.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="imgui\imgui.ini" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
