added rendering of countdown delay on sprint start and delay on finish before showing result screen;

--- a/TetrisLT/imgui.ini
+++ b/TetrisLT/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=714,26
+Pos=540,28
 Size=432,441
 Collapsed=1
 
@@ -9,6 +9,11 @@ Size=800,800
 Collapsed=0
 
 [Window][Results]
+Pos=0,0
+Size=800,800
+Collapsed=0
+
+[Window][countdown]
 Pos=0,0
 Size=800,800
 Collapsed=0
