added loss condition (block out) and lose screen

--- a/TetrisLT/TetrisLT.vcxproj
+++ b/TetrisLT/TetrisLT.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="src\helpers.cpp" />
     <ClCompile Include="src\Timer.cpp" />
     <ClCompile Include="src\UI\Delay.cpp" />
+    <ClCompile Include="src\UI\GameOver.cpp" />
     <ClCompile Include="src\UI\Menu.cpp" />
     <ClCompile Include="src\UI\Resources.cpp" />
     <ClCompile Include="src\UI\Results.cpp" />
@@ -210,6 +211,7 @@
     <ClInclude Include="h\Tetromino\Z.hpp" />
     <ClInclude Include="h\Timer.hpp" />
     <ClInclude Include="h\UI\Delay.hpp" />
+    <ClInclude Include="h\UI\GameOver.hpp" />
     <ClInclude Include="h\UI\Menu.hpp" />
     <ClInclude Include="h\UI\Multiplayer.hpp" />
     <ClInclude Include="h\UI\Resources.hpp" />
