--- a/TetrisLT/TetrisLT.vcxproj.filters
+++ b/TetrisLT/TetrisLT.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="src\helpers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\UI\GameOver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="h\game.hpp">
@@ -246,6 +249,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="h\helpers.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="h\UI\GameOver.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
