--- a/TetrisLT/imgui.ini
+++ b/TetrisLT/imgui.ini
@@ -1,9 +1,14 @@
-[Window][Debug##Default]
-Pos=540,28
-Size=432,441
-Collapsed=1
-
 [Window][asda]
+Pos=0,0
+Size=800,800
+Collapsed=0
+
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
+Collapsed=0
+
+[Window][countdown]
 Pos=0,0
 Size=800,800
 Collapsed=0
@@ -13,8 +18,13 @@ Pos=0,0
 Size=800,800
 Collapsed=0
 
-[Window][countdown]
-Pos=0,0
-Size=800,800
+[Window][KeySetting]
+Pos=272,374
+Size=255,52
+Collapsed=0
+
+[Window][ErrorModal]
+Pos=339,3
+Size=122,794
 Collapsed=0
 
