--- a/TetrisLT/game.ini
+++ b/TetrisLT/game.ini
@@ -1,2 +1,9 @@
 SFXVolume=80
-SelectedTetrisSettingName=Setting#6503
+SelectedTetrisSettingName=Setting#1555
+QuitKey=41
+ResetKey=21
+StartCountdownTicks=59
+StartCountdownTickDurationMS=21
+ResetCountdownTicks=3
+ResetCountdownTickDurationMS=400
+GameFinishDelayMS=3000
